Revision history for Task-BeLike-HMA-Catalyst

0.03_01 Jul 24, 2011

        - Convert README to Markdown

0.03    Jul 17, 2011

        - Adjust required versions for many dependencies
        - Add YAML::Tiny for Catalyst::Devel 1.29+
        - Add Task::BeLike::HMA to metadata
        - Switch GitHub URLs to https

0.01    Oct 24, 2010

        - Initial commit and release to GitHub