@@ -3,6 +3,7 @@ Revision history for Task-BeLike-HMA-Catalyst
 0.03_01 Jul 24, 2011
 
         - Convert README to Markdown
+        - Upgrade to Module::Install 1.01
 
 0.03    Jul 17, 2011
 
